--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,6 @@
 name: Publish to npm
 
-on:
-  release:
-    types: [created]  # Only trigger on new GitHub release
+on: workflow_dispatch  # Only trigger on new GitHub release
 
 jobs:
   publish:
