--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@null-none/hyper-view",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Full-featured HTMX-style micro library with WebSocket, history, spinner, and more",
   "homepage": "https://github.com/null-none/hyper-view#readme",
   "bugs": {
@@ -13,8 +13,5 @@
   "license": "MIT",
   "author": "Kalinin Mitko",
   "type": "commonjs",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  }
+  "main": "index.js"
 }
